# R2

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md  tryme.sh
.cargo/: config.toml
.github/workflows/: hugo.yaml
Docs/: .gitignore  README.md  architecture.md  go.mod  go.sum  hugo.toml  lifetimes.md  modules.md  r2_configs.md  tryme.md  unsafe.md
Docs/content/en/: _index.md
Docs/content/en/Architecture/: _index.md
Docs/content/en/Dpdk/: _index.md
Docs/content/en/Lifetimes/: _index.md
Docs/content/en/Modules/: _index.md
Docs/content/en/R2Configs/: _index.md
Docs/content/en/Tryme/: _index.md
Docs/content/en/Unsafe/: _index.md
api/: Cargo.toml  api.md
api/src/: lib.rs
apis/interface/: Cargo.toml
apis/interface/src/: apis.thrift  lib.rs
apis/log/: Cargo.toml
apis/log/src/: apis.thrift  lib.rs
apis/route/: Cargo.toml
apis/route/src/: apis.thrift  lib.rs
common/: Cargo.toml
common/src/: lib.rs
counters/: Cargo.toml  counters.md
counters/src/: bin.rs  flavors.rs  lib.rs  test.rs
dpdk/: Cargo.toml  Dpdk_Support.md  build.rs  build.sh  dpdk.md
dpdk/src/: dpdk.rs  lib.rs  stubs.rs  test.rs
ffis/dpdk/: Cargo.toml  build.rs
ffis/dpdk/src/: bindgen.rs  lib.rs
ffis/dpdk/src/bindgen/: README  allow-function.regex  allow-type.regex  allow-var.regex  bindgen.md  bindgen.sh  headers.h
ffis/dpdk/src/bindgen/include/: lib.rs
fwd/: Cargo.toml  fwd.md
fwd/src/: adj.rs  intf.rs  ipv4.rs  lib.rs
gnodes/interface/: Cargo.toml
gnodes/interface/src/: lib.rs
gnodes/layer2/eth/decap/: Cargo.toml
gnodes/layer2/eth/decap/src/: lib.rs
gnodes/layer2/eth/encap/: Cargo.toml
gnodes/layer2/eth/encap/src/: lib.rs
gnodes/layer3/ipv4/fwd/: Cargo.toml
gnodes/layer3/ipv4/fwd/src/: lib.rs
gnodes/layer3/ipv4/parse/: Cargo.toml
gnodes/layer3/ipv4/parse/src/: lib.rs
graph/: Cargo.toml  graph.md
graph/src/: lib.rs  test.rs
log/: Cargo.toml  log.md
log/src/: lib.rs  test.rs
main/: Cargo.toml  main.md
main/src/: ifd.rs  ipv4.rs  logs.rs  main.rs  msgs.rs  pkts.rs  test.rs
msg/: Cargo.toml  msg.md
msg/src/: lib.rs
names/: Cargo.toml  names.md
names/src/: lib.rs
packet/: Cargo.toml  packet.md
packet/src/: lib.rs  test.rs
perf/: Cargo.toml
perf/src/: lib.rs  stubs.rs
sched/: Cargo.toml  sched.md
sched/src/: hfsc.rs  lib.rs
sched/src/hfsc/: test.rs
unix/efd/: Cargo.toml
unix/efd/src/: lib.rs
unix/epoll/: Cargo.toml
unix/epoll/src/: lib.rs  test.rs
unix/shm/: Cargo.toml
unix/shm/src/: lib.rs
unix/socket/: Cargo.toml
unix/socket/src/: lib.rs  test.rs
utils/: clis.md
utils/r2cnt/: Cargo.toml  r2cnt.md
utils/r2cnt/src/: main.rs
utils/r2intf/: Cargo.toml  r2intf.md
utils/r2intf/src/: main.rs  r2intf.yml
utils/r2log/: Cargo.toml  r2log.md
utils/r2log/src/: main.rs  r2log.yml
utils/r2rt/: Cargo.toml  r2rt.md
utils/r2rt/src/: main.rs  r2rt.yml
