[package]
name = "socket"
version = "0.1.0"
authors = ["Gopa Kumar <gopakumarce@gmail.com>"]
edition = "2018"

[dependencies]
libc = { version = "0.2.60", features = [ "extra_traits" ] }
crossbeam-queue = "0.2.1"
common = { path = "../../common" }
packet = { path = "../../packet" }
counters = { path = "../../counters" }
graph = { path = "../../graph" }
