[package]
name = "l3_ipv4_parse"
version = "0.1.0"
authors = ["Gopa Kumar <gopakumarce@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../../../../common" }
names = { path = "../../../../names" }
graph = { path = "../../../../graph" }
packet = { path = "../../../../packet" }
counters = { path = "../../../../counters" }
fwd = { path = "../../../../fwd" }
log = { path = "../../../../log" }
